--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://bancoaula.c7roo7m0gxqj.us-east-1.rds.amazonaws.com/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aspoo.c7roo7m0gxqj.us-east-1.rds.amazonaws.com/aspoo
+spring.datasource.username=aspoo
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
